rundeckpro-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rudeckpro-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #for sticky sessions
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: rundeckpro
          servicePort: 8080
        path: /

---

apiVersion: v1
kind: Service
metadata:
  name: rundeckpro
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4440
  selector:
    app: rundeckpro
  externalTrafficPolicy: Local
  sessionAffinity: ClientIP

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rundeckpro
  namespace: default
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: rundeckpro
    spec:
      containers:
      - name: rundeck
        image: rundeckpro/enterprise:SNAPSHOT
        args: ["-Dlogging.config=/home/rundeck/server/config/logback.groovy"]
        volumeMounts:
          - mountPath: /home/rundeck/etc/rundeckpro-license.key
            name: license
            subPath: rundeckpro-license.key
          - mountPath: /home/rundeck/etc/admin-role.aclpolicy
            name: acl
            subPath: admin-role.aclpolicy
          - mountPath: /home/rundeck/server/config/logback.groovy
            name: logback
            subPath: logback.groovy
          - mountPath: /home/rundeck/server/config/log4j.properties
            name: log4j
            subPath: log4j.properties
        ports:
        - containerPort: 4440
        livenessProbe:
          # an http probe
          httpGet:
            path: /
            port: 4440
            scheme: HTTP
          initialDelaySeconds: 500
          periodSeconds: 120
        readinessProbe:
          httpGet:
            path: /
            port: 4440
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: license
        secret:
          secretName: rundeckpro-license
          items:
          - key: rundeckpro-license.key
            path: rundeckpro-license.key
      - name: acl
        secret:
          secretName: rundeckpro-admin-acl
          items:
          - key: admin-role.aclpolicy
            path: admin-role.aclpolicy
      - name: logback
        secret:
          secretName: logback
          items:
          - key: logback.groovy
            path: logback.groovy
      - name: log4j
        secret:
          secretName: log4j
          items:
          - key: log4j.properties
            path: log4j.properties
